# ai-engineer-code-challenge

./: .gitignore  Makefile  README.md  config.yaml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docs.yml
docs/: Makefile  api.rst  build_docs.py  conf.py  index.rst  installation.rst  src.rst
docs/api/: index.rst
src/: __init__.py  embed.py  ingest.py  llm.py  query.py  utils.py
tests/: __init__.py  test_embed.py  test_ingest.py  test_integration.py  test_llm.py  test_main.py  test_query.py
